<resources>
    <string name="app_name">SharingTechnology</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="NewUserRegistration">新用户注册</string>
    <string name="username">昵称</string>
    <string name="telephone">电话号码</string>
    <string name="email">邮箱</string>
    <string name="register">注册</string>
    <string name="loginInterface">登录界面</string>
    <string name="power_off">Power Off</string>
    <string name="Your_app">YourApp</string>
    <string name="Welcome">Welcome</string>
    <string name="logininterface">登录接口</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
</resources>