<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/header"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/header_layer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="18dp"
        android:gravity="center_vertical">
    </LinearLayout>

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        android:layout_marginBottom="30dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:background="@drawable/login_background">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Welcome"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="10dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textWelcome"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:lines="1"
            android:background="@null"
            android:hint="@string/account"
            android:textColor="@color/black"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"/>

        <View
            android:id="@+id/viewDividerForAccount"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextHint"
            android:layout_below="@id/account"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/warn_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewDividerForAccount"
            android:elevation="2dp"
            android:text=""
            android:layout_marginStart="50dp"
            android:textColor="@color/warn"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_account"
            android:layout_alignBottom="@id/account"
            android:layout_alignStart="@id/account"
            android:layout_marginStart="10dp"
            app:tint="@color/colorTextHint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"
            android:layout_below="@id/viewDividerForAccount"
            android:background="@null"
            android:hint="@string/password"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <View
            android:id="@+id/viewDividerForPassword"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextHint"
            android:layout_below="@id/password"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/warn_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewDividerForPassword"
            android:elevation="2dp"
            android:text=""
            android:layout_marginStart="50dp"
            android:textColor="@color/warn"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_lock"
            android:layout_alignStart="@id/password"
            android:layout_alignBottom="@id/password"
            android:layout_marginStart="10dp"
            app:tint="@color/colorTextHint" />

        <Button
            android:id="@+id/toLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewDividerForPassword"
            android:background="@drawable/primary_buttom_background"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toLogin"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textSize="13sp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

